<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f3f1f1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_form_titleText"
            android:textSize="12dp"
            android:textColor="#1e1e1e"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="15.25dp"
            android:layout_marginTop="25.25dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="329dp"
            android:layout_height="41.50dp"
            android:hint="@string/register_form_emailHintText"
            android:textColorHint="#afafaf"
            android:textSize="12dp"
            android:paddingLeft="10.50dp"
            android:layout_marginTop="6dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:background="#ffffff"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="329dp"
            android:layout_height="41.50dp"
            android:hint="@string/register_form_PWHintText"
            android:textColorHint="#afafaf"
            android:textSize="12dp"
            android:paddingLeft="10.50dp"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            android:background="#ffffff"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="329dp"
            android:layout_height="41.50dp"
            android:hint="@string/register_form_PWCheckHintText"
            android:textColorHint="#afafaf"
            android:textSize="12dp"
            android:paddingLeft="10.50dp"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/editText1"
            android:background="#ffffff"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="329dp"
            android:layout_height="41.50dp"
            android:hint="@string/register_form_nameHintText"
            android:textColorHint="#afafaf"
            android:textSize="12dp"
            android:paddingLeft="10.50dp"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            android:background="#ffffff"/>


        <EditText
            android:id="@+id/editText4"
            android:layout_width="156.75dp"
            android:layout_height="41.50dp"
            android:hint="@string/register_form_RRHintText"
            android:textColorHint="#afafaf"
            android:textSize="12dp"
            android:paddingLeft="10.50dp"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            android:background="#ffffff"/>

        <View
            android:layout_width="7.25dp"
            android:layout_height="3dp"
            android:background="#cdcdcd"
            app:layout_constraintTop_toTopOf="@+id/editText4"
            app:layout_constraintBottom_toBottomOf="@+id/editText4"
            app:layout_constraintLeft_toRightOf="@+id/editText4"
            app:layout_constraintRight_toLeftOf="@+id/editText5"/>


        <EditText
            android:id="@+id/editText5"
            android:layout_width="41.50dp"
            android:layout_height="41.50dp"
            android:hint="@string/register_form_RRbackHintText"
            android:textColorHint="#afafaf"
            android:textSize="12dp"
            android:gravity="center"
            android:layout_marginLeft="15.25dp"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toRightOf="@+id/editText4"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            android:background="#ffffff"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textSize="22dp"
            android:layout_marginTop="6dp"
            android:textColor="#605f5f"
            android:text="@string/register_form_RRHideText"
            app:layout_constraintTop_toTopOf="@+id/editText5"
            app:layout_constraintBottom_toBottomOf="@+id/editText5"
            app:layout_constraintLeft_toRightOf="@+id/editText5"/>



        <EditText
            android:id="@+id/editText6"
            android:layout_width="213.75dp"
            android:layout_height="41.50dp"
            android:hint="@string/register_form_phoneHintText"
            android:textColorHint="#afafaf"
            android:textSize="12dp"
            android:paddingLeft="10.50dp"
            android:layout_marginTop="42dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/editText4"
            android:background="#ffffff"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/find_id_request_btn"
            android:layout_marginLeft="6dp"
            app:layout_constraintLeft_toRightOf="@+id/editText6"
            app:layout_constraintTop_toTopOf="@+id/editText6"/>

        <EditText
            android:id="@+id/editText7"
            android:layout_width="329dp"
            android:layout_height="41.50dp"
            android:hint="@string/register_form_CNHintText"
            android:textColorHint="#afafaf"
            android:textSize="12dp"
            android:paddingLeft="10.50dp"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/editText6"
            android:background="#ffffff"/>


        <ImageView
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/next_btn"
            android:layout_marginTop="84.75dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>