<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f3f1f2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.25dp"
            android:layout_marginTop="15dp"
            android:text="@string/login_firstText"
            android:textColor="#292929"
            android:textSize="22.50dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.75dp"
            android:src="@drawable/dutchpay_logo_txt"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="329dp"
            android:layout_height="41.50dp"
            android:layout_marginTop="32.25dp"
            android:background="#ffffff"
            android:hint="@string/login_IdHint"
            android:paddingLeft="10.50dp"
            android:singleLine="true"
            android:textColorHint="#afafaf"
            android:textSize="12dp"
            app:layout_constraintLeft_toLeftOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="329dp"
            android:layout_height="41.50dp"
            android:background="#ffffff"
            android:hint="@string/login_PWHint"
            android:paddingLeft="10.50dp"
            android:singleLine="true"
            android:textColorHint="#afafaf"
            android:layout_marginTop="3dp"
            android:textSize="12dp"
            app:layout_constraintLeft_toLeftOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_login"
            android:layout_marginTop="11.50dp"
            app:layout_constraintTop_toBottomOf="@+id/editText1"
            app:layout_constraintLeft_toLeftOf="@+id/editText1"/>

        <ImageView
            android:id="@id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/check_box"
            android:layout_marginTop="5.25dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView1"
            app:layout_constraintLeft_toLeftOf="@id/imageView1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/agree_on"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintLeft_toLeftOf="@id/imageView3"/>

        <TextView
            android:id="@id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_autoLoginText"
            android:textSize="12dp"
            android:textColor="#292929"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="8.75dp"
            app:layout_constraintTop_toBottomOf="@id/imageView1"
            app:layout_constraintLeft_toRightOf="@id/imageView3"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="329dp"
            android:layout_height="70.50dp"
            android:layout_marginTop="75.75dp"
            android:background="#ffffff"
            app:layout_constraintLeft_toLeftOf="@+id/imageView1"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            android:orientation="horizontal" />

        <ImageView
            android:id="@id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_join"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_registerText"
            android:textColor="#757575"
            android:textSize="10dp"
            android:layout_marginLeft="49dp"
            android:layout_marginTop="5.25dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout" />

        <ImageView
            android:id="@id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_search_id"
            android:layout_marginLeft="64.50dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:layout_constraintLeft_toRightOf="@+id/imageView4"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_fineIdText"
            android:textColor="#757575"
            android:textSize="10dp"
            android:layout_marginLeft="49dp"
            android:layout_marginTop="5.25dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            app:layout_constraintLeft_toRightOf="@+id/textView2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_search_password"
            android:layout_marginLeft="64.50dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:layout_constraintLeft_toRightOf="@+id/imageView10"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_finePWText"
            android:textColor="#757575"
            android:textSize="10dp"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="5.25dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            app:layout_constraintLeft_toRightOf="@+id/textView4" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_kakao_login"
            android:layout_marginTop="17.75dp"
            app:layout_constraintLeft_toLeftOf="@id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

    </android.support.constraint.ConstraintLayout>

</layout>