<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f3f1f1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24.75dp"
            android:text="@string/agreeAll_titleText"
            android:textColor="#2a2a2a"
            android:textSize="16.50dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!---->

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="466.50dp"
            android:orientation="horizontal"
            android:background="#ffffff"
            android:layout_marginTop="14.50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/check_box"
            android:layout_marginTop="20.25dp"
            android:layout_marginLeft="21.25dp"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/agree_off"
            app:layout_constraintLeft_toLeftOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#1e1e1e"
            android:textSize="14dp"
            android:text="@string/agreeAll_agreeTitleText"
            android:layout_marginTop="18.25dp"
            android:layout_marginLeft="6.75dp"
            app:layout_constraintLeft_toRightOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"/>

        <!---->

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:background="#cdcdcd"
            android:layout_marginTop="13.50dp"
            android:layout_centerInParent="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            />

        <!---->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:padding="8dp"
            android:text="@string/agreeAll_agreeContentText"
            android:textColor="#1e1e1e"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"/>


    </android.support.constraint.ConstraintLayout>

</layout>